Fixed nav bar jumping to certain sections of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,24 @@
 * {
     margin:0;
-    padding:0;  
+    padding:0; 
   }
 body {
   font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
   width: 100%;
+}
+
+h1 {
+  display: inline-block;
+  font-size: 48px;
+}
+
+h2,
+h3 {
+    font-size: 40px;
+    float: left;
+    align-items: center;
+    color: #2aa768;
 }
 
 header {
@@ -18,12 +31,6 @@ header {
     position: absolute;
     top: 0;
 }
-
-h1 {
-    display: inline-block;
-    font-size: 48px;
-  }
-
 
 header nav {
     padding-top: 15px;
@@ -50,30 +57,33 @@ header nav ul li a:hover {
 }
 
 main {
-  height: 300px;
-  background: white;
-  border-radius: 15px;
-  padding: 200px 0px;
+  padding: 20px;
+  background-color: #ffffff;
+  color: #2aa768;
+  width: 100%;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
+  margin-top: 5%;
 }
 
-section.about,
-section.projects {
-  border-right: 5px solid #2aa768;
-  flex: 0 0 400px;
+main section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 15px;
+  font-size: 20px;
   text-align: center;
-  justify-content: center;
-
 }
 
-section.bio,
-section.works {
-  flex-wrap: wrap;
-  flex-direction: row;
-  flex: 1 0 400px
+main section p {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0px 30px;
+}
 
+main p {
+  text-decoration: none;
+  display: inline-block;
 }
 
 footer {
@@ -81,8 +91,10 @@ footer {
   background-color: #ffffff;
   color: #2aa768;
   width: 100%;
+  height: 75px;
   justify-content: space-between;
   position: absolute;
+  margin-top: 0;
   bottom: 0;
 }
 
@@ -109,15 +121,7 @@ color: #2aa768;
 text-decoration: underline;
 }
 
-h2,
-h3 {
-    font-size: 40px;
-    float: left;
-    align-items: center;
-    color: #2aa768;
-}
-
-.label {
+#label {
   display: flex;
   font-size: 40px;
   font-weight: bold;
@@ -128,10 +132,28 @@ h3 {
   align-items: center;
 }
 
-.info {
+#info {
   display: flex;
   height: 150px;
   align-items: center;
   justify-content: space-evenly;
 }
 
+#about,
+#projects {
+  display: flex;
+  font-size: 40px;
+  font-weight: bold;
+  float: left;
+  border-right: 5px solid #2aa768;
+  height: 150px;
+  align-items: center;
+} */
+
+/* .bio,
+.work {
+  color: black;
+  display: flex;
+  height: 150px;
+  align-items: center;
+}
